--- a/FigSource/Fig-stickman.tex
+++ b/FigSource/Fig-stickman.tex
@@ -31,9 +31,6 @@
 } % \stickman ==== A
 % ======================================= A
 
-
-
-
 % ======================================= V
 \begin{tikzpicture}
 
@@ -41,16 +38,15 @@
 %	\stickman{3}{3}{1} {}
 	
 	% generation
-	\stickman{1}{3}{0.4} {}
-	\stickman{1.8}{4.3}{0.4} {}
-	\stickman{3}{4.8}{0.4} {}
+	\stickman{1}{3}{0.4} {a}
+	\stickman{1.8}{4.3}{0.4} {b}
+	\stickman{3}{4.8}{0.3} {$c_{i}$}
 	\stickman{3.1}{2}{0.4} {}
-	\stickman{4}{3}{0.4} {}
+	\stickman{4}{3}{0.5} {}
 	
-
-%	% i, j
-%	\stickman{3}{3}{0.2} {i}
-%	\stickman{5}{3}{0.2} {j}
+	% i, j
+	\stickman{6}{3}{0.2} {i}
+	\stickman{9}{3}{1} {j}
 	
 	%
 %	\stickman{6}{3}{1}{}
